testsuite/tests/grammar/invalid_unparser/toplevel-pick.lkt
import lexer_example

grammar foo_grammar {
    @main_rule main_rule <- pick("example" Root(item))
    item <- or(Identifier(@identifier) | Number(@number))
}
